fix font-size and padding and gap

--- a/css/style.css
+++ b/css/style.css
@@ -208,9 +208,9 @@ label,
 [data-select-item],
 .catalog__head span {
   font-family: var(--text-font);
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 16px;
   color: var(--text);
 }
 
@@ -225,7 +225,7 @@ textarea,
   font-family: var(--text-font);
   font-size: 14px;
   font-weight: 400;
-  line-height: 18px;
+  line-height: 16px;
   color: var(--text);
 }
 
@@ -245,9 +245,9 @@ small {
 b,
 strong {
   font-family: var(--text-font);
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
-  line-height: 19px;
+  line-height: 16px;
   color: var(--text);
 }
 
@@ -255,25 +255,25 @@ button,
 .btn,
 .btn input {
   font-family: var(--text-font);
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 16px;
   color: var(--text);
 }
 
 h1 {
   font-family: var(--title-font);
-  font-size: 109px;
+  font-size: 75px;
   font-weight: 700;
-  line-height: 112px;
+  line-height: 78px;
   color: var(--text);
 }
 
 h2 {
   font-family: var(--title-font);
-  font-size: 67px;
+  font-size: 48px;
   font-weight: 700;
-  line-height: 72px;
+  line-height: 52px;
   color: var(--text);
 }
 
@@ -281,25 +281,25 @@ h3,
 .catalog_top__head,
 .product__head {
   font-family: var(--title-font);
-  font-size: 41px;
+  font-size: 39px;
   font-weight: 700;
-  line-height: 48px;
+  line-height: 45px;
   color: var(--text);
 }
 
 h4 {
   font-family: var(--text-font);
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 700;
-  line-height: 29px;
+  line-height: 25px;
   color: var(--text);
 }
 
 h5 {
   font-family: var(--text-font);
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
-  line-height: 28px;
+  line-height: 20px;
   color: var(--text);
 }
 
@@ -2831,6 +2831,7 @@ html.has-scroll-dragging {
   height: 100%;
   flex-direction: column;
   gap: 10px;
+  text-align: center;
 }
 
 .category__sublist {
@@ -5412,7 +5413,7 @@ html.has-scroll-dragging {
 }
 
 .systems__bottom {
-  margin: -100px 0 0;
+  margin: -80px 0 0;
 }
 
 .systems__bottom_flex {
@@ -5456,7 +5457,7 @@ html.has-scroll-dragging {
 .systems__button_default {
   width: 100%;
   min-width: 100%;
-  height: 100px;
+  height: 80px;
 }
 
 .systems__image img {
@@ -6932,8 +6933,43 @@ font.errortext{color:red}font.notetext{color:green}
     min-height: calc(100vh - 90px);
   }
   h1 {
-    font-size: 99px;
-    line-height: 102px;
+    font-size: 62px;
+    line-height: 72px;
+  }
+  h2,
+  h3,
+  .catalog_top__head,
+  .product__head {
+    font-size: 31px;
+    line-height: 36px;
+  }
+  h4,
+  h5 {
+    font-size: 16px;
+    line-height: 18px;
+  }
+  a,
+  p,
+  li,
+  label,
+  [data-select-title],
+  [data-select-item],
+  .catalog__head span,
+  input,
+  input::placeholder,
+  textarea::placeholder,
+  textarea,
+  .header__nav_link,
+  .header__region,
+  .header__tel,
+  .category__item span,
+  b,
+  strong,
+  button,
+  .btn,
+  .btn input {
+    font-size: 12px;
+    line-height: 14px;
   }
   .container,
   .bx-404-container {
@@ -6947,14 +6983,14 @@ font.errortext{color:red}font.notetext{color:green}
   }
   .category__item,
   .category__top {
-    padding: 30px 35px;
+    padding: 20px;
   }
   .category__item {
-    min-height: 210px;
+    min-height: 150px;
   }
   .company__block {
     padding: 80px 0 30px;
-    gap: 30px;
+    gap: 15px;
   }
   .company__left {
     gap: 30px;
@@ -7062,6 +7098,16 @@ font.errortext{color:red}font.notetext{color:green}
     top: calc(50% + 175px);
     left: 400px;
   }
+  .map__contact {
+    padding: 10px 0 0;
+  }
+  .map__item,
+  .map__active {
+    padding: 10px 40px;
+  }
+  .map__desc {
+    padding: 5px 0 0;
+  }
   .catalog__item {
     width: calc(25% - 4px);
   }
@@ -7098,7 +7144,7 @@ font.errortext{color:red}font.notetext{color:green}
     width: 186px;
   }
   .systems__top {
-    margin: 100px 0px 0px;
+    margin: 40px 0px 0px;
   }
   .systems__top_notimage {
     margin: 0;
@@ -7134,7 +7180,7 @@ font.errortext{color:red}font.notetext{color:green}
     width: calc(25% - 15px);
   }
   .company_page__top_flex {
-    padding: 60px 40px 60px 0;
+    padding: 30px 40px 30px 0;
     gap: 40px;
   }
   .company_top__container,
@@ -7148,7 +7194,7 @@ font.errortext{color:red}font.notetext{color:green}
     min-height: 360px;
   }
   .company_specialists__block {
-    padding: 80px 0;
+    padding: 40px 0;
   }
   .company_bottom__link {
     padding: 30px 40px;
@@ -7206,6 +7252,87 @@ font.errortext{color:red}font.notetext{color:green}
   .yamap__button {
     padding: 16px 40px;
   }
+  .models__head {
+    padding: 0 0 20px;
+  }
+  .models__info {
+    gap: 10px;
+  }
+  .models__bottom_head {
+    padding: 0 0 10px;
+  }
+  .models__bottom_big_info {
+    gap: 20px;
+  }
+  .showreel__head {
+    padding: 40px 0px 20px;
+  }
+  .company_slider__info {
+    gap: 20px;
+  }
+  .feedback__block {
+    padding: 40px 0px;
+  }
+  .feedback__heading {
+    padding: 0px 0px 10px;
+  }
+  .catalog_top__left {
+    padding: 30px 40px 30px 0;
+  }
+  .catalog_top__right {
+    padding: 30px 0 30px 40px;
+  }
+  .catalog_top__desc {
+    gap: 20px;
+  }
+  .systems__top_flex .catalog_top__head {
+    padding: 30px 60px;
+  }
+  .systems__bottom_desc {
+    padding: 30px 60px;
+    gap: 20px;
+  }
+  .systems__desc {
+    gap: 20px;
+  }
+  .catalog_filter__block {
+    padding: 20px 0px 0px;
+  }
+  .category__image,
+  .category__image img {
+    height: 70px;
+  }
+  .news {
+    margin: 50px 0 0;
+    padding: 0 0 25px;
+  }
+  .news__container,
+  .news__slider_container {
+    padding: 0;
+  }
+  .news__navigations {
+    top: 40px;
+    right: 20px;
+  }
+  .news__info {
+    height: 175px;
+    padding: 30px 15px 0;
+  }
+  .news__link:hover .news__info {
+    height: 105px;
+  }
+  .footer__lists {
+    padding: 20px 0px;
+    gap: 80px;
+  }
+  .footer__top {
+    padding: 20px 0;
+    gap: 10px;
+  }
+  .footer__bottom {
+    padding: 20px 0;
+    gap: 15px;
+  }
 }
 /* max-width: 1919px */
 
@@ -7250,28 +7377,6 @@ font.errortext{color:red}font.notetext{color:green}
   .btn input {
     font-size: 16px;
     line-height: 21px;
-  }
-  h1 {
-    font-size: 62px;
-    line-height: 72px;
-  }
-  h2 {
-    font-size: 42px;
-    line-height: 52px;
-  }
-  h3,
-  .catalog_top__head,
-  .product__head {
-    font-size: 31px;
-    line-height: 36px;
-  }
-  h4 {
-    font-size: 18px;
-    line-height: 21px;
-  }
-  h5 {
-    font-size: 18px;
-    line-height: 25px;
   }
   .container,
   .bx-404-container {
@@ -7650,18 +7755,6 @@ font.errortext{color:red}font.notetext{color:green}
   .company__desc {
     max-width: 100%;
   }
-  .news {
-    margin: 50px 0 0;
-    padding: 0 0 25px;
-  }
-  .news__container,
-  .news__slider_container {
-    padding: 0;
-  }
-  .news__navigations {
-    top: 40px;
-    right: 20px;
-  }
   .news__block {
     width: 100%;
     padding: 40px 20px;
@@ -7671,13 +7764,6 @@ font.errortext{color:red}font.notetext{color:green}
   .news__slider {
     max-width: calc(100% - 20px);
     margin: -235px 0 0 20px;
-  }
-  .news__info {
-    height: 175px;
-    padding: 30px 15px 0;
-  }
-  .news__link:hover .news__info {
-    height: 105px;
   }
   .models__block {
     padding: 25px 0;
